Fixed test-failing bugs.